force-app/main/default/objects/hud_Phone__c.object
<CustomObject>
    <label>hud_Phone</label>
    <nameField>
        <displayFormat>HPH-{00000000}</displayFormat>
        <label>Phone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>hud_Phones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>CONTACT_DATA_EXT__c</fullName>
        <label>CONTACT_DATA_EXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACT_DATA_KEY__c</fullName>
        <externalId>true</externalId>
        <label>CONTACT_DATA_KEY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACT_DATA_SUBTYPE_CD__c</fullName>
        <label>CONTACT_DATA_SUBTYPE_CD</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACT_DATA_TYPE_CD__c</fullName>
        <label>CONTACT_DATA_TYPE_CD</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACT_DATA__c</fullName>
        <label>CONTACT_DATA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACT_DIR_LISTING_KEY__c</fullName>
        <label>CONTACT_DIR_LISTING_KEY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFF_STATUS__c</fullName>
        <label>EFF_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INTERNAL_ID__c</fullName>
        <label>INTERNAL_ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LISTING_CATEGORY__c</fullName>
        <label>LISTING_CATEGORY</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LISTING_ID__c</fullName>
        <label>LISTING_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MULE_UNIQUE_PERSON_KEY__c</fullName>
        <externalId>true</externalId>
        <label>MULE_UNIQUE_PERSON_KEY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIVACY_VALUE__c</fullName>
        <label>PRIVACY_VALUE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phone Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Phones</relationshipLabel>
        <relationshipName>hud_Phones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNIV_ID__c</fullName>
        <externalId>true</externalId>
        <label>UNIV_ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPDATE_DT__c</fullName>
        <label>UPDATE_DT</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Phone_Contact__c</columns>
        <columns>UNIV_ID__c</columns>
        <columns>CONTACT_DATA_KEY__c</columns>
        <columns>CONTACT_DATA_TYPE_CD__c</columns>
        <columns>CONTACT_DATA_SUBTYPE_CD__c</columns>
        <columns>CONTACT_DATA__c</columns>
        <columns>CONTACT_DATA_EXT__c</columns>
        <columns>LISTING_CATEGORY__c</columns>
        <columns>PRIVACY_VALUE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>