force-app/main/default/objects/hud_Phone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Phone_Contact__c</columns>
    <columns>UNIV_ID__c</columns>
    <columns>CONTACT_DATA_KEY__c</columns>
    <columns>CONTACT_DATA_TYPE_CD__c</columns>
    <columns>CONTACT_DATA_SUBTYPE_CD__c</columns>
    <columns>CONTACT_DATA__c</columns>
    <columns>CONTACT_DATA_EXT__c</columns>
    <columns>LISTING_CATEGORY__c</columns>
    <columns>PRIVACY_VALUE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>